# often-sdm

./: CMakeLists.txt
examples/: CMakeLists.txt  gen_box_data.cpp  landmark_detection.cpp  test.cpp  test_model.cpp
include/superviseddescent/: regressors.hpp  superviseddescent.hpp
